<resources>
    <string name="app_namee">Ethiopian Premier league</string>
    <string name="menu_drawer_open">drawer open</string>
    <string name="menu_drawer_close">drawer close</string>
    <string name="home">Home</string>
    <string name="team">Team</string>
    <string name="matches">Matches</string>
    <string name="standing">Standing</string>
    <string name="about">About</string>
    <string name="squad">Squad</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="oro">Affan Oromo</string>
    <string name="am">Amharic</string>
    <string name="eng">English</string>
    <string name="Contact">Contact Us</string>
    <string name="facebook">Facebook</string>
    <string name="telegram">Telegram</string>
    <string name="youtube">More information</string>
    <string name="exit">Exit</string>
    <string name="exitmessage">Do you want to exit? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share">Share</string>
    <string name="name">Name:</string>
    <string name="position">Position:</string>
    <string name="age">Age</string>
    <string name="disc">Discripion:</string>
    <string name="rateus">Rate Us</string>
    <string name="moreapp">More App</string>
    <string name="brightness">Brightness</string>
    <string name="vs">VS</string>

                    <string name="adama">Adama Ketema</string>
                    <string name="addis">Addis Ababa Ketema</string>
                    <string name="arba">Arba Minch Ketema</string>
                    <string name="bahir">Bahir Dar Ketema</string>
                    <string name="dire">Dire Dawa Ketema </string>
                    <string name="bunna">Ethiopia Bunna</string>
                    <string name="fasil">Fasil Kenema</string>
                    <string name="hadiya">Hadiya Hossana</string>
                    <string name="hawassa">Awassa Ketema</string>
                    <string name="jimma">Jimma Aba Jifar</string>
                    <string name="kidus">Kidus Giorgis</string>
                    <string name="mekelakeya">   Mekelakeya</string>
                    <string name="sidama">Sidama Bunna</string>
                    <string name="sebeta">Sebeta Ketema</string>
                    <string name="wolaita">Wolaita Dicha</string>
                    <string name="wolkite">Wolkite Ketema </string>
   <string name="adamastadium">Adama Stadium</string>
    <string name="addisstadium">Addis Ababa stadium</string>
    <string name="arbastadium">Arba Minch stadium</string>
    <string name="bahastadium">Bahir Dar stadium</string>
    <string name="direstadium">Dire Dawa Stadium</string>
    <string name="hadiyastadium">Hadiya Stadium</string>
    <string name="hawasastadium">Hawassa Stadium</string>
    <string name="jimmastadium">Jimma Stadium</string>
    <string name="sebetastadium">Sebeta Stadium</string>
    <string name="wolitastadium">Wolaita Soddo Stadium</string>
    <string name="wokitestadium">Wolkite Stadium</string>
    <string name="yirgalem">Yirgalem Stadium</string>

                                                            <string name="day1">Wednesday 09:00,March 30,2022</string>
                                                            <string name="day2">Wednesday 12:00,March 30,2022</string>
                                                            <string name="day3">Thurday 09:00,March 31,2022</string>
                                                            <string name="day4">Thurday 12:00,March 31,2022</string>
                                                            <string name="day5">Friday,09:00,April 1,2022</string>
                                                            <string name="day6">Friday,12:00,April 1,2022</string>
                                                            <string name="day7">Saturday,09:00,April 2,2022</string>
                                                            <string name="day8">Saturday,12:00,April 2,2022</string>
                                                            <string name="day10">Tuesday,12:00,April 5,2022</string>
                                                            <string name="day11">Wednesday 09:00,April 6,2022</string>
                                                            <string name="day12">Wednesday 12:00,April 6,2022</string>
                                                            <string name="day13">Thurday 09:00,April 7,2022</string>
                                                           <string name="day15">Friday,09:00,April 8,2022</string>
                                                            <string name="day16">Friday,12:00,April 8,2022</string>
                                                            <string name="day17">Saturday,09:00,April 11,2022</string>
                                                            <string name="day18">Saturday,12:00,April 11,2022</string>
                                                            <string name="day19">Tuesday,09:00,April 12 ,2022</string>
                                                            <string name="day20">Tuesday,12:00,April 12,2022</string>
    <string name="privacy">Privacy</string>
    <string name="fasistadium">Fasiledes Stadium</string>
    <string name="day9">Tuesday,09:00,April 5,2022</string>
    <string name="day14">Thurday 12:00,April 7,2022</string>
    <string name="backbtn">Press back again to exit!</string>
    <string name="dark">Dark Mode</string>
    <string name="Temesgen_Yohannes">Temesgen Yohannes</string>
    <string name="bahiru">Bahiru Negash </string>
    <string name="Lukwago_Charles">Lukwago Charles</string>
    <string name="Dawit_Behailu">Home</string>
    <string name="Suleman_Hamid">Suleman Hamid</string>
    <string name="Amanuel_Terfu">Amanuel Terfu</string>
    <string name="Mignot_Debebe">Mignot Debebe</string>
    <string name="Desta_Demu">Desta Demu</string>
    <string name="Henok_Adugna">Henok Adugna</string>
    <string name="Yared_Hasen">Yared Hasen</string>
    <string name="Abrham_Getachew">Abrham Getachew</string>
    <string name="Shahidu_Mustafa">Shahidu Mustafa</string>
    <string name="Hayder_Sherefa">Hayder Sherefa</string>
    <string name="Saladin_Bergicho">Saladin Bergicho</string>
    <string name="Gathuoch_Panom">Gathuoch Panom</string>
    <string name="Yeabssira_Tesfaye">Yeabssira Tesfaye</string>
    <string name="Bereket_Wolde">Bereket Wolde</string>
    <string name="Kenean_Markneh">Kenean Markneh</string>
    <string name="Abel_Yonas">Abel Yonas</string>
    <string name="Miraj_Sefa">Miraj Sefa</string>
    <string name="Edwin_Frimpong_Manso">Edwin Frimpong-Manso</string>
    <string name="Natnael_Zeleke">Natnael Zeleke</string>
    <string name="Alazar_Samuel">Alazar Samuel</string>
    <string name="Fuad_Abdella">Fuad Abdella</string>
    <string name="Bulcha_Shura">Bulcha Shura</string>
    <string name="Tegenu_Teshome">Tegenu Teshome</string>
    <string name="Abel_Yalew">Abel Yalew</string>
    <string name="Amanuel_Gebremichael">Amanuel Gebremichael</string>
    <string name="Chernet_Gugsa">Chernet Gugsa</string>
    <string name="Adis_Giday">Adis Giday</string>
    <string name="Dagmawi_Araya">Dagmawi Araya</string>
    <string name="Ismail_Ouro_Agoro">Ismail Ouro-Agoro</string>
    <string name="Awet_Kidane">Awet Kidane</string>
    <string name="bunaname">Ethiopian buna sport club</string>
    <string name="bunaadress">bole,Addis Ababa, Ethiopia</string>
    <string name="bunafound">Founded 1975</string>
    <string name="discription">Ethiopian Coffee Sport Club has its origins in 1976, when the employees of Kefa Coffee Processing decided to establish a football club. After gathering the required number of players, the club was registered as Coffee Board Sport Club on the kebele level in order to take part in local tournaments. The club then moved to playing in the AEWA Factory workers Association level, the third division of Ethiopian football at the time. Funded largely by the Kefa factory workers at the time, the club offered its players employment at the factory as an incentive to keep them at the club. As a result, players would work the morning shift at the factory and then play football in the evenings. Thus, the first official name of the club became, "Yenegat Kokebe" (Morning Star) in reference to early raising factory workers who were also part-time footballers.</string>
   <string name="gambella">Gambella, Ethiopia – The 30,000 seater Gambella Stadium construction project is nearing completion. The state of the art international grade stadium, saw its blueprints made public only last October, but the progress in the construction is such that the Ethiopian Football Federation president Junedine Bashah, boldly declared on his Twitter account that the stadium would be completed by the end of the year.</string>
   <string name="adddddddsta">National stadium for Ethiopia is to be built mostly on and with excavated land. Will be partially covered and equipped with running track to be able to host large scale athletics events, excluding only the Olympic.\n" +Apart from the central stadium a secondary one is to be built along with indoor and outdoor natatoriums and sports halls. Then comes the new building of the Federal Sports Commission. All buildings will get connected by a central plaza with shade and fountains. Overall, the complex is to cover 60 hectares.</string>
    <string name="bahardar">Bahir Dar Stadium is a multi-purpose stadium in Bahir Dar, Ethiopia. It is used mostly for football matches although it also has athletics facilities. The stadium has a capacity of 60,000 people. Currently, the stadium is the largest in the country by capacity.HistoryThe construction of Bahir Dar Stadium was started in 2008 by MIDROC Ethiopia. In 2015, the stadium received recognition from CAF and FIFA and hosted its first international matches.In March 2015,Bahir Dar Stadium is a multi-purpose stadium in Bahir Dar, Ethiopia. It is used mostly for football matches although it also has athletics facilities. The stadium has a capacity of 60,000 people. Currently, the stadium is the largest in the country by capacity.HistoryThe construction of Bahir Dar Stadium was started in 2008 by MIDROC Ethiopia. In 2015, the stadium received recognition from CAF and FIFA and hosted its first international matches.In March 2015</string>
   <string name="newsfeed"> NEWS FEEDS</string>
</resources>